<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".JAMEMainActivity" >

    <TextView
        android:id="@+id/midi_range_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/midi_range"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_marginTop="25dp"
        android:layout_weight="0.17"
        android:gravity="center" >

        <TextView
            android:id="@+id/midi_min_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/midi_min"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/midi_max_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/midi_max"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <NumberPicker
            android:id="@+id/select_midi_min"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignRight="@+id/midi_min_title"
            android:layout_below="@+id/midi_min_title"
            android:layout_marginRight="18dp"
            android:layout_marginTop="14dp" />

        <NumberPicker
            android:id="@+id/select_midi_max"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignLeft="@+id/midi_max_title"
            android:layout_alignTop="@+id/select_midi_min"
            android:layout_marginLeft="25dp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/toggle_inversion_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toggle_inversion"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ToggleButton
        android:id="@+id/toggle_inversion_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="20dp"
        android:gravity="center" >

        <ToggleButton
            android:id="@+id/send_midi_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/calibrate_button"
            android:textOff="@string/send_midi"
            android:textOn="@string/sending_midi" 
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <Button
            android:id="@+id/calibrate_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/initiate_calibration" />
    </RelativeLayout>

</LinearLayout>